--- a/index.css
+++ b/index.css
@@ -1,3 +1,85 @@
+:root {
+  --main-bg-color: #f8fac6;
+  --main-font: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+html, body {
+  box-sizing: border-box;
+}
+
+/* css variable var(--main-bg-color) */
+
 main {
   margin: 15px; /* Margins on all page content - Change if ya want */
+  background-color: var(--main-bg-color) ;
+  
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  text-align: center;
+  background-color: var(--main-bg-color);
+  
+}
+
+.bluebonnet-text {
+  padding-top: 2rem;
+
+}
+
+.records-text {
+  padding-top: 2rem;
+  padding-bottom: 4rem;
+}
+
+.branches {
+  padding-bottom: 4rem;
+}
+
+.buy-sell-text {
+  padding-bottom: 2rem;
+}
+
+.vinyl-etc-text {
+  padding-bottom: 5rem;
+}
+
+#announcements {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  align-items: center;
+}
+
+#announcement-text {
+  font-size: 3vw;
+  padding: 3rem;
+  font-family: var(--main-font);
+}
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--main-bg-color);
+  justify-content: center;
+  text-align: center;
+  flex-wrap: wrap;
+}
+
+.contact-text {
+  font-size: 3vw;
+  font-family: var(--main-font);
+  line-height: 1rem;
+
+}
+
+.contact-icons {
+  background-color: var(--main-bg-color);
+  display: flex;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  justify-content: space-evenly;
+  flex: wrap;
 }
