Removed margin on html body

--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,11 @@ html,
 body {
   box-sizing: border-box;
   color: #312163;
+  margin: 0;
 }
 
 main {
-  margin: 10px; /* Margins on all page content - Change if ya want */
+  /* margin: 10px; /1* Margins on all page content - Change if ya want *1/ */
   background-color: var(--main-bg-color);
 }
 
