--- a/src/index.css
+++ b/src/index.css
@@ -8,33 +8,39 @@ html,
 body {
   box-sizing: border-box;
   color: #312163;
+  margin: 0 auto;
 }
 
 main {
-  margin: 10px; /* Margins on all page content - Change if ya want */
+  margin: 5px; /* Margins on all page content - Change if ya want */
   background-color: var(--main-bg-color);
+  min-height: 100vh;
 }
 
 /* svg images */
 
 .blue-svg {
-  width: 500px;
+  /* width: 500px; */
+  width: 40vw;
 }
 
 .recs-svg {
-  width: 325px;
+  /* width: 325px; */
+  width: 26vw;
 }
 
 .branch-svg {
-  width: 450px;
+  width: 20vw;
 }
 
 .buy-sell-svg {
-  width: 400px;
+  /* width: 400px; */
+  width: 25vw;
 }
 
 .vinyl-svg {
-  width: 455px;
+  /* width: 455px; */
+  width: 28vw;
 }
 
 .bluebonnet-records-container {
@@ -51,7 +57,7 @@ main {
 }
 
 .records-text {
-  margin-left: 3rem;
+  margin-left: 2vw;
   margin-top: 2rem;
 }
 
@@ -82,7 +88,7 @@ main {
 }
 
 .vinyl-etc-text {
-  margin-left: 3rem;
+  margin-left: 2vw;
 }
 
 #announcements {
@@ -93,7 +99,7 @@ main {
 }
 
 #announcement-text {
-  font-size: 1.25rem;
+  font-size: 1.25vw;
   padding: 3rem;
   font-family: var(--main-font);
 }
@@ -104,11 +110,11 @@ main {
   background-color: var(--main-bg-color);
   justify-content: center;
   text-align: center;
-  flex-wrap: wrap;
+
 }
 
 .contact-text {
-  font-size: 1.5rem;
+  font-size: 1.5vw;
   font-family: var(--main-font);
   line-height: 1rem;
 }
@@ -121,9 +127,39 @@ main {
   justify-content: space-evenly;
   text-align: center;
   flex: wrap;
+
 }
 
-@media screen and (max-width: 600px) {
+.fb-svg {
+  width: 4vw;
+}
+
+.tw-svg {
+  width: 4vw;
+
+}
+
+.ig-svg {
+  width: 4vw;
+
+}
+
+.fb-icon:hover {
+  position: relative;
+  bottom: 5px;
+}
+
+.ig-icon:hover {
+  position: relative;
+  bottom: 5px;
+}
+
+.tw-icon:hover {
+  position: relative;
+  bottom: 5px;
+}
+
+@media screen and (max-width: 900px) {
   main {
     margin: 5px;
   }
@@ -139,7 +175,7 @@ main {
   }
 
   .blue-svg {
-    width: 90vw;
+    width: 95vw;
   }
 
   .recs-svg {
@@ -147,7 +183,7 @@ main {
   }
 
   .branch-svg {
-    width: 80vw;
+    width: 65vw;
   }
 
   .buy-sell-svg {
@@ -158,9 +194,29 @@ main {
     width: 85vw;
   }
 
+  .fb-svg {
+    width: 10vw;
+  }
+
+  .tw-svg {
+    width: 10vw;
+
+  }
+  
+  .ig-svg {
+    width: 10vw;
+
+  }
+
   .contact-text {
     font-size: 1rem;
     font-family: var(--main-font);
     line-height: 1rem;
+  }
+
+  #announcement-text {
+    font-size: 1rem;
+    padding: 3rem;
+    font-family: var(--main-font);
   }
 }
