--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
 
 main {
   background-color: var(--main-bg-color);
-  height: 100vh;
+  min-height: 100vh;
 }
 
 /* svg images */
@@ -99,7 +99,6 @@ main {
 #announcement-text {
   font-size: 1.25vw;
   font-family: var(--main-font);
-  font-weight: 900;
   overflow: auto;
 }
 
@@ -121,7 +120,6 @@ main {
   background-color: var(--main-bg-color);
   display: flex;
   padding-top: 5vh;
-  /* padding-bottom: 2vh; */
   justify-content: space-evenly;
   text-align: center;
   flex: wrap;
@@ -161,11 +159,11 @@ main {
   }
 
   .vinyl-etc-text {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.5vh;
   }
 
   .records-text {
-    margin-top: 1rem;
+    margin-top: 1vh;
   }
 
   .blue-svg {
@@ -207,11 +205,24 @@ main {
   }
 
   #announcement-text {
-    font-size: 1rem;
+    font-size: 2rem;
     font-family: var(--main-font);
   }
 
   .contact-icons {
     padding-top: 3vh;
+    padding-bottom: 2vh;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #announcement-text {
+    font-size: 1rem;
+  }
+
+  .contact-text {
+    font-size: 5vw;
+    font-family: var(--main-font);
+    line-height: 1vh;
   }
 }
