--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,18 @@ body {
 
 main {
   background-color: var(--main-bg-color);
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
+}
+
+.container {
+  /* flex: 1; */
+  display: flex;
+  flex-direction: column;
 }
 
 /* svg images */
@@ -93,7 +104,9 @@ main {
   flex-direction: column;
   background-color: #fff;
   align-items: center;
+  min-height: 12vh;
   overflow: auto;
+  justify-content: center;
 }
 
 #announcement-text {
@@ -119,11 +132,12 @@ main {
 .contact-icons {
   background-color: var(--main-bg-color);
   display: flex;
+  flex-direction: row;
   padding-top: 5vh;
-  justify-content: space-evenly;
-  text-align: center;
-  flex: wrap;
   align-items: center;
+  justify-content: space-evenly;
+  padding-bottom: 3vh;
+  flex: 1;
 }
 
 .fb-svg {
@@ -154,7 +168,7 @@ main {
 }
 
 @media screen and (max-width: 1024px) {
-  main {
+  .wrapper {
     margin: 5px;
   }
 
@@ -187,21 +201,25 @@ main {
   }
 
   .fb-svg {
-    width: 10vw;
+    width: 12vw;
   }
 
   .tw-svg {
-    width: 10vw;
+    width: 12vw;
   }
 
   .ig-svg {
-    width: 10vw;
+    width: 12vw;
   }
 
   .contact-text {
     font-size: 4vw;
     font-family: var(--main-font);
     line-height: 1rem;
+  }
+
+  #announcements {
+    justify-content: center;
   }
 
   #announcement-text {
@@ -211,13 +229,19 @@ main {
 
   .contact-icons {
     padding-top: 3vh;
-    padding-bottom: 2vh;
+    padding-bottom: 3vh;
   }
 }
 
 @media screen and (max-width: 600px) {
   #announcement-text {
     font-size: 1rem;
+  }
+
+  #announcements {
+    justify-content: center;
+    align-items: center;
+    min-height: 10vh;
   }
 
   .contact-text {
