added clipping mask to text and icons

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,11 @@ main {
   display: flex;
   flex-direction: column;
 }
+/* texture */
+.grit {
+  mask-image: url("../dist/assets/grit.png");
+  -webkit-mask-image: url("../dist/assets/grit.png");
+}
 
 /* svg images */
 
