--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,8 @@ main {
 
 .branch-svg {
   width: 20vw;
+  padding-left: 2vw;
+  padding-right: 2vw;
 }
 
 .buy-sell-svg {
@@ -85,6 +87,15 @@ main {
 .branches {
   margin-bottom: 3rem;
   margin-top: 2rem;
+}
+
+.shop-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-family: var(--main-font);
+  font-size: 1.5vw;
 }
 
 .buy-sell-vinyl-container {
@@ -145,7 +156,9 @@ main {
   flex: 1;
 }
 
-.fb-svg, .tw-svg, .ig-svg {
+.fb-svg,
+.tw-svg,
+.ig-svg {
   width: 4vw;
   max-width: 50px;
 }
@@ -188,6 +201,8 @@ main {
 
   .branch-svg {
     width: 55vw;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
   }
 
   .buy-sell-svg {
@@ -229,6 +244,12 @@ main {
     padding-top: 3vh;
     padding-bottom: 3vh;
   }
+
+  .shop-links {
+    display: flex;
+    flex-direction: column;
+    font-size: 4vw;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -246,5 +267,11 @@ main {
     font-size: 5vw;
     font-family: var(--main-font);
     line-height: 1vh;
+  }
+
+  .shop-links {
+    display: flex;
+    flex-direction: column;
+    font-size: 5vw;
   }
 }
