--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,8 @@ main {
 }
 /* texture */
 .grit {
-  mask-image: url("../dist/assets/grit.png");
-  -webkit-mask-image: url("../dist/assets/grit.png");
+  mask-image: url('../dist/assets/grit.png');
+  -webkit-mask-image: url('../dist/assets/grit.png');
 }
 
 /* general elements */
@@ -156,8 +156,8 @@ a:hover {
 .contact-text {
   font-size: 1.5vw;
   font-family: var(--main-font);
-  line-height: 1.5vw;
-  /* padding-bottom: 6px; */
+  line-height: 1rem;
+  padding: 1rem;
 }
 
 .contact-icons {
@@ -169,6 +169,19 @@ a:hover {
   justify-content: space-evenly;
   padding-bottom: 3vh;
   flex: 1;
+}
+
+.shop-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: var(--main-font);
+  font-size: 1.5vw;
+}
+
+.hours {
+  line-height: 0.33rem;
+  padding-left: 2rem;
 }
 
 .fb-svg,
@@ -244,6 +257,7 @@ a:hover {
     font-size: 4vw;
     font-family: var(--main-font);
     line-height: 1rem;
+    padding: 1rem;
   }
 
   #announcements {
@@ -264,6 +278,15 @@ a:hover {
     display: flex;
     flex-direction: column;
     font-size: 4vw;
+  }
+
+  .shop-info {
+    display: flex;
+    flex-direction: column;
+    font-size: 4vw;
+  }
+  .hours {
+    padding-left: 0;
   }
 }
 
@@ -287,6 +310,10 @@ a:hover {
   .shop-links {
     display: flex;
     flex-direction: column;
+    font-size: 5vw;
+  }
+
+  .shop-info {
     font-size: 5vw;
   }
 }
