--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
   box-sizing: border-box;
   /*color: #312163;*/
   color: var(--light-txt-color);
-  margin: 0 auto;
+  margin: 0;
 }
 
 header {
@@ -33,9 +33,11 @@ main {
   background-color: var(--main-bg-color);
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   font-size: 24px;
   font-family: var(--main-font);
+  height: 100vh;
+  justify-content: space-between;
+  width: 100%;
 }
 
 p {
@@ -52,6 +54,12 @@ p {
 
 
 /* general-purpose-css */
+.font-weight-bold {
+  font-weight: bold;
+}
+.text-align-left {
+  text-align: left;
+}
 .text-decoration-none {
   text-decoration: none;
 }
@@ -124,9 +132,10 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 10vh;
+  min-height: 40px;
   overflow: auto;
   justify-content: center;
+  width: 100vw;
 }
 
 .contact-info {
@@ -148,10 +157,25 @@ p {
 
 .hours {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  /* grid-template-columns: 1fr 1fr; */
+  grid-template-columns: 100px 1fr;
   background-color: pink;
   margin: 0 auto;
-  width: 400px;
+  /* width: 400px; */
+}
+
+/* grid placement */
+.gr-r2 {
+  grid-column: 2 / span 1;
+  grid-row: 2 / span 1;
+}
+.gr-r3 {
+  grid-column: 2 / span 1;
+  grid-row: 3 / span 1;
+}
+.gr-r4 {
+  grid-column: 2 / span 1;
+  grid-row: 4 / span 1;
 }
 
 .icon {
@@ -175,13 +199,9 @@ p {
 }
 @media screen and (max-width: 1024px) {
 
-  .wrapper {
-    margin: 5px;
-  }
-
-  .vinyl-etc-text {
-    margin-bottom: 1.5vh;
-  }
+  /* .vinyl-etc-text { */
+  /*   margin-bottom: 1.5vh; */
+  /* } */
 
   .records-text {
     margin-top: 1vh;
@@ -197,8 +217,8 @@ p {
 
   .branch-svg {
     width: 55vw;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
+    /* margin-top: 2vh; */
+    /* margin-bottom: 2vh; */
   }
 
   .buy-sell-svg {
