--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,600');
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,600,700');
 
 :root {
   --main-purp-color: #312163;
@@ -6,6 +6,7 @@
   --mid-banner-color: #d1d1d1;
   --light-txt-color: #605e5c;
   --main-font: 'Nunito', sans-serif;
+  --max-width: 66vw;
   font-weight: 600;
 }
 
@@ -25,9 +26,9 @@ body {
   margin: 0;
 }
 
-header {
-  margin-top: 1rem;
-}
+/* header { */
+/*   margin-top: 1rem; */
+/* } */
 
 main {
   background-color: var(--main-bg-color);
@@ -35,8 +36,9 @@ main {
   flex-direction: column;
   font-size: 24px;
   font-family: var(--main-font);
-  height: 100vh;
+  height: calc(100vh - 2rem);
   justify-content: space-between;
+  margin-top: 1rem;
   width: 100%;
 }
 
@@ -56,6 +58,12 @@ p {
 /* general-purpose-css */
 .font-weight-bold {
   font-weight: bold;
+}
+.grid-column-span-2 {
+  grid-column: span 2;
+}
+.text-align-center {
+  text-align: center;
 }
 .text-align-left {
   text-align: left;
@@ -157,31 +165,16 @@ p {
 
 .hours {
   display: grid;
-  /* grid-template-columns: 1fr 1fr; */
-  grid-template-columns: 100px 1fr;
-  background-color: pink;
+  grid-template-columns: 1.2fr 1fr;
+  /* grid-template-columns: 100px 1fr; */
   margin: 0 auto;
   /* width: 400px; */
-}
-
-/* grid placement */
-.gr-r2 {
-  grid-column: 2 / span 1;
-  grid-row: 2 / span 1;
-}
-.gr-r3 {
-  grid-column: 2 / span 1;
-  grid-row: 3 / span 1;
-}
-.gr-r4 {
-  grid-column: 2 / span 1;
-  grid-row: 4 / span 1;
 }
 
 .icon {
   width: 4vw;
   max-width: 50px;
-  min-width: 30px;
+  min-width: 40px;
   mask-image: url('../dist/assets/grit.png');
   -webkit-mask-image: url('../dist/assets/grit.png');
   vertical-align: bottom;
