--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,9 @@
 :root {
   --main-purp-color: #312163;
   --main-bg-color: #fbfaf9;
-  --mid-banner-color: #d1d1d1;
+  --light-brown: #b7a196;
   --light-txt-color: #605e5c;
   --main-font: 'Nunito', sans-serif;
-  /* --max-width: 68vw; */
   --max-width: 90vw;
   font-weight: 600;
 }
@@ -16,18 +15,19 @@ a {
   color: var(--link-txt-color);
 }
 a:hover {
-  color: var(--main-purp-color);
+  /* color: var(--main-purp-color); */
+  color: var(--light-brown);
 }
 
 html,
 body {
+  background-color: var(--main-bg-color);
   box-sizing: border-box;
   color: var(--light-txt-color);
   margin: 0;
 }
 
 main {
-  background-color: var(--main-bg-color);
   display: flex;
   flex-direction: column;
   font-size: 28px;
@@ -44,13 +44,7 @@ p {
   padding: 0;
 }
 
-
 /* texture */
-.grit {
-  mask-image: url('../dist/assets/grit.png');
-  -webkit-mask-image: url('../dist/assets/grit.png');
-}
-
 
 /* general-purpose-css */
 .background-color-pink {
@@ -60,6 +54,9 @@ p {
   background-color: violet;
 }
 .display-none-mobile {
+  display: initial;
+}
+.display-none-desktop {
   display: none;
 }
 .font-weight-bold {
@@ -71,9 +68,20 @@ p {
 .grid-row-span-3 {
   grid-row: span 3;
 }
-.max-height-200px {
+.position-absolute {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.position-relative {
+  position: relative;
+}
+.branches-container-features {
   height: 20vh;
-  max-height: 400px;
+  max-height: 300px;
+  min-height: 150px;
+  top: -90px;
+  left: -100px;
 }
 .text-align-center {
   text-align: center;
@@ -95,7 +103,7 @@ p {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 0 auto .5rem auto;
+  margin: 0 auto 1rem auto;
   max-width: var(--max-width);
   text-align: left;
 }
@@ -109,9 +117,25 @@ p {
 
 .branch-svg {
   width: 33%;
-  max-width: 300px;
+  max-width: 225px;
 }
-
+#record-svg:hover > #record-outer-svg {
+  filter: brightness(0) saturate(100%) invert(71%) sepia(7%) saturate(717%) hue-rotate(335deg) brightness(91%) contrast(95%);
+}
+#record-svg:hover > #record-inner-svg {
+  filter: brightness(0) saturate(100%) invert(38%) sepia(0%) saturate(2444%) hue-rotate(31deg) brightness(95%) contrast(91%);
+}
+#tshirt-text {
+  color: var(--light-brown);
+  top: 36px;
+  left: 51px;
+}
+#tshirt-svg:hover {
+  filter: brightness(0) saturate(100%) invert(71%) sepia(7%) saturate(717%) hue-rotate(335deg) brightness(91%) contrast(95%);
+}
+#tshirt-svg:hover + #tshirt-text {
+  color: var(--light-txt-color); 
+}
 .buy-sell-text {
   width: 44%;
 }
@@ -119,13 +143,13 @@ p {
   width: 51%;
 }
 
-
 .branches-container {
   align-items: center;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
-  margin-left: -1.5rem; /*offset div to make branches appear centered */
+  /*margin-left: -1.5rem; /*offset div to make branches appear centered */
   text-align: center;
 }
 
@@ -140,7 +164,7 @@ p {
 }
 
 #announcements {
-  background-color: var(--mid-banner-color);
+  background-color: var(--light-brown);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -185,14 +209,11 @@ p {
 }
 .icon {
   width: 50px;
-  mask-image: url('../dist/assets/grit.png');
-  -webkit-mask-image: url('../dist/assets/grit.png');
   vertical-align: bottom;
 }
 .icon:hover {
-  filter: hue-rotate(230deg) saturate(47.5) brightness(50%); /*changes svg color on hover */
-  mask-image: none;
-  -webkit-mask-image: none;
+  filter: brightness(0) saturate(100%) invert(71%) sepia(7%) saturate(717%) hue-rotate(335deg) brightness(91%) contrast(95%);
+  /* filter: hue-rotate(230deg) saturate(47.5) brightness(40%); changes svg color on hover */
 }
 
 @media screen and (max-width: 1024px) {
@@ -205,7 +226,7 @@ p {
   .bluebonnet-records-container {
     align-items: center;
     flex-direction: column;
-    margin: 0 auto .5rem auto;
+    margin: 0 auto 1rem auto;
     max-width: 100vw;
     width: calc(100vw - 2rem);
     text-align: center;
@@ -218,6 +239,7 @@ p {
   }
   .buy-sell-vinyl-container {
     width: calc(100% - 2rem);
+    margin-bottom: -.3rem; /* compensate for extra space in img */
   }
   .branch-svg {
     width: 33%;
@@ -261,23 +283,24 @@ p {
     font-size: 16px;
   }
   .display-none-mobile {
-    display: none
+    display: none;
   }
   .display-none-desktop {
-    display: default;
+    display: initial;
   }
   .contact-info {
+    align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: 1rem;
-    text-align: left;
+    text-align: center;
     margin: 0 auto;
     width: 100%;
   }
 
   .address {
     display: block;
-    margin: 0 0 1rem 0;
+    margin: 1rem 0;
     text-align: center;
     width: 100%;
   }
