--- a/src/index.css
+++ b/src/index.css
@@ -144,8 +144,8 @@ p {
 }
 #tshirt-text {
   color: var(--light-brown);
-  top: 36px;
-  left: 51px;
+  top: 30%; /*36px;*/
+  left: 29% /*51px;*/
 }
 #tshirt-svg:hover {
   filter: brightness(0) saturate(100%) invert(71%) sepia(7%) saturate(717%) hue-rotate(335deg) brightness(91%) contrast(95%);
